[project]
name = "deepmorph-concept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.2.0",
    "bitsandbytes>=0.45.0",
    "diffusers>=0.31.0",
    "ruff>=0.8.2",
    "setuptools>=75.6.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.0",
]
